// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavbarLink /> renders a selected link 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-link makeStyles-selected MuiTypography-body1 MuiTypography-colorPrimary"
    href="/test"
    target=""
  >
    label
  </a>
</div>
`;

exports[`<NavbarLink /> renders an unselected link 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-link false MuiTypography-body1 MuiTypography-colorPrimary"
    href="/"
    target=""
  >
    label
  </a>
</div>
`;
